20050204 configure.in,Makefile.am: More Win32 compilation fixes (Fred).
20050204 configure.in,Makefile.am: Mark libspectrum.h as a nodist file instead
	 of deleting it when configure is run, remember to make distribution
	 tarballs with 'make dist-gzip' (Fred).
20050213 szx.c: make uncompressed snaps with DOCK data work (and don't waste
	 memory when loading compressed snaps with DOCK data).
20050213 szx.c: don't bom if we try and write out a page which doesn't
	 exist in the snapshot.
20050218 ide.c: add libspectrum_ide_dirty function.
20050227 make-perl.c,libspectrum.h.in: advertise that we support zlib
         compressed files (Fred).
20050302 Makefile.am: Stop automake trying to build make-perl (Fred).
20050302 make-perl.c,myglib/ghash.c: Add g_hash_table_size to the glib
         replacement code (Fred).
20050305 libspectrum.h.in,timings.c: add interrupt length to timings
	 information.
20050325 tzx_read.c: avoid implementation-defined behaviour if a block
	 has no data bytes.
20050325 tape_block.c: avoid undefined behaviour if a ROM block has no
	 data bytes.
20050402 microdrive.c: don't check bad blocks when checksumming (part of
	 patch #1161364) (Gergely Szasz).
20050409 libspectrum.h.in,tape.c: add libspectrum_tape_{insert,remove}_block
	 routines.
20050430 internals.h,sna.c,snapshot.c,z80.c: add wrappers so that
	 libspectrum_snap_read doesn't have to call deprecated functions.
20050507 bzip2.c,creator.c,crypto.c,internals.h,rzx.c,tzx_read.c,
	 tzx_write.c: fix up gcc 4.0 signedness warnings (fixes bug
	 #1197013).
20050517 make-perl.c, myglib.c: add g_slist_delete_link, g_slist_insert,
         g_slist_length, GINT_TO_POINTER and GPOINTER_TO_INT to the glib
         emulation layer (Fred).
20050922 creator.c,libspectrum.h.in,tape_accessors.txt,tape_block.h,
         tzx_read.c,tzx_write.c,doc/libspectrum.txt: API changes for gcc 4.0
         signed char conversion warnings (patch #1197351) (Fred).
20051029 timings.c: timing tweak for TC2048 (Fred)